--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * { border:0px; padding:0; margin:0; font-weight:normal; font-size:100%; text-decoration:none; }
 
-body { min-height:100%; }
+body { min-height:100%; font-family: 'Open Sans', sans-serif; }
 
 .sharp  { background:url('../img/background3.jpg') fixed; background-size: cover; }
 .blured { background:url('../img/background-blured3.jpg') fixed; background-size: cover; }
@@ -20,10 +20,12 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 { font-size: 150%; }
 
-/* PAGE ***********************************************************************/
+/* HEADER *********************************************************************/
 #site-header {
 	width: 100%;
 	border-bottom: 1px solid rgba(255,255,255,0.5);
+	-webkit-box-shadow: 0 -3px 3px 3px rgba(0,0,0,1);
+	box-shadow: 0 -3px 3px 3px rgba(0,0,0,1);
 }
 
 #site-header > div {
@@ -70,32 +72,118 @@ h1 { font-size: 150%; }
 	color: #fff;
 	text-shadow: 0 0 2px #000;
 	letter-spacing: 0.06em;
-	font-family: 'Open Sans', sans-serif;
 	text-align: center;
+	border-left: 1px solid transparent;
 }
 
 #site-header .right a:hover {
-	background: rgba(255,255,255,0.2);
+	background: rgba(255,255,255,0.1);
+	border-left: 1px solid rgba(255,255,255,0.5);
 }
 
-#loginForm {
-	display: inline-block;
-	padding: 2em;
-	border: 1px solid rgba(255,255,255,0.5);
+#page-content {
+	width:100%;
 }
 
-#loginForm input {
-	padding: 0.4em;
-	background: rgba(255,255,255,0.2);
-	-webkit-box-shadow:0 0 4px -2px rgba(0,0,0,0.8);
-	box-shadow:0 0 4px -2px rgba(0,0,0,0.5);
-}
-
-#pageContent {
-	width: 100%;
-}
-
-#pageContent > div > .center {
-	padding: 2em;
+/* LOGIN **********************************************************************/
+#page-content > div > div.center {
 	text-align: center;
+	padding: 2em 0;
+}
+
+#login {
+	display: inline-block;
+	margin: 0 auto;
+	padding: 1em;
+	border: 1px solid rgba(255,255,255,0.5);
+	-webkit-box-shadow: 0 0 3px 0 rgba(0,0,0,1);
+	box-shadow: 0 0 3px 0 rgba(0,0,0,1);
+}
+
+#login-failed {
+	background: rgba(100,0,0,0.55);
+	padding: 1em;
+	margin-bottom: 1em;
+	max-width: 30em;
+	border: 1px solid rgba(255,160,100,0.2);
+	-webkit-box-shadow: 0 1px 3px -2px rgba(0,0,0,1);
+	box-shadow: 0 1px 3px -2px rgba(0,0,0,1);
+}
+
+#login-failed p {
+	color: #fff;
+}
+
+#login-failed-text1 {
+	font-style: italic;
+	padding-bottom: 0.5em;
+}
+
+#login-failed-text2 {
+	font-size: 85%;
+}
+
+#login-table {
+	width: 100%;
+	color: #fff;
+}
+
+#login-left, #login-right {
+	vertical-align: middle;
+}
+
+#login-left {
+	width: 99%;
+}
+
+#login-right {
+	padding-left:1em;
+	width: 1%;
+}
+
+#login-user {
+	text-align: left;
+	padding-bottom: 0.5em;
+}
+
+#login-pass {
+	text-align: left;
+}
+
+#login-user > div, #login-pass > div {
+	letter-spacing: 0.05em;
+	text-shadow: 0 0 2px #000;
+}
+
+#login-user input, #login-pass input {
+	display: block;
+	width: 100%;
+	box-sizing: border-box;
+	background: rgba(0,20,50,0.4);
+	color: #fff;
+	border: 1px solid rgba(255,255,255,0.5);
+	padding: 0.5em;
+	margin-top: 0.2em;
+}
+
+#login-user input:focus, #login-pass input:focus {
+	border: 1px solid rgba(255,255,255,0.8);	
+}
+
+#login-submit input {
+	display:block;
+	background: url('../img/login.png');
+	width: 128px;
+	height: 128px;
+	color: transparent;
+	opacity: 0.5;
+}
+
+#login-submit input:hover {
+	background: url('../img/login-hover.png');
+	cursor: pointer;
+}
+
+#login-submit input:focus {
+	opacity: 0.8;
 }
